# GB_CPP_adv

./: README.md  makestruct.sh
lesson001/: README.md
lesson001/task01/: task01.cpp  words.txt
lesson001/task02/: task02.cpp  words.txt
lesson001/task03/: task03.cpp
lesson001/task04/: task04.cpp
lesson001/task05/: task05.cpp
lesson001/task05/letters/: a000.txt  a001.txt  a002.txt  a003.txt  a004.txt  a005.txt  a006.txt  a007.txt  a008.txt  a009.txt  a010.txt  a011.txt  a012.txt  q000.txt  q001.txt  q002.txt  q003.txt  q004.txt  q005.txt  q006.txt  q007.txt  q008.txt  q009.txt  q010.txt  q011.txt  q012.txt
lesson002/: README.md
lesson002/task01/: task01.cpp
lesson002/task02/: pic1.txt  pic2.txt  task02.cpp
lesson002/task03/: basket.txt  task03.cpp
lesson002/task04/: atm.txt  task04.cpp
lesson003/: README.md
lesson003/task01/: task01.cpp
lesson003/task02/: task02.cpp
lesson003/task03/: task03.cpp
lesson004/: README.md
lesson004/task01/: task01.cpp
lesson004/task02/: task02.cpp
lesson004/task03/: task03.cpp
lesson005/: README.md
lesson005/task01/: task01.cpp
lesson005/task02/: task02.cpp
lesson005/task03/: task03.cpp
lesson006/: README.md
lesson006/task01/: task01.cpp
lesson006/task02/: task02.cpp
lesson006/task03/: task03.cpp
lesson007/: README.md
lesson007/task01/: CMakeLists.txt
lesson007/task01/include/: operations.h  point.h
lesson007/task01/src/: CMakeLists.txt  main.cpp
lesson007/task02/: CMakeLists.txt
lesson007/task02/include/: commands.h  cpu.h  disk.h  gpu.h  kbd.h  ram.h
lesson007/task02/src/: CMakeLists.txt  cpu.cpp  disk.cpp  gpu.cpp  kbd.cpp  main.cpp  ram.cpp
lesson008/: README.md
lesson008/task01/: CMakeLists.txt
lesson008/task01/include/: album.h  commands.h  player.h  track.h
lesson008/task01/src/: CMakeLists.txt  album.cpp  main.cpp  player.cpp  track.cpp
lesson008/task02/: CMakeLists.txt
lesson008/task02/include/: phone.h  phonenumber.h
lesson008/task02/src/: CMakeLists.txt  main.cpp  phone.cpp  phonenumber.cpp
lesson008/task03/: CMakeLists.txt
lesson008/task03/include/: display.h  position.h  window.h
lesson008/task03/src/: CMakeLists.txt  display.cpp  main.cpp  position.cpp  window.cpp
lesson009/: README.md
lesson009/task01/: CMakeLists.txt
lesson009/task01/src/: CMakeLists.txt  main.cpp
lesson009/task02/: CMakeLists.txt
lesson009/task02/include/: circle.h  colors.h  figure.h  rectangle.h  triangle.h
lesson009/task02/src/: CMakeLists.txt  circle.cpp  figure.cpp  main.cpp  rectangle.cpp  triangle.cpp
lesson009/task03/: CMakeCache.txt  CMakeLists.txt  Makefile  a.out  clpr.sh  cmake_install.cmake
lesson009/task03/include/: employee.h  group.h  manager.h  task.h  team.h
lesson009/task03/src/: CMakeLists.txt  Makefile  cmake_install.cmake  employee.cpp  group.cpp  main.cpp  manager.cpp  task.cpp  team.cpp
lesson010/: README.md
lesson010/task01/: task01.cpp
lesson010/task02/: task02.cpp
lesson010/task03/: task03.cpp
lesson011/: README.md
lesson011/task01/include/: animal.h  dog.h  talent.h
lesson011/task01/src/: animal.cpp  cat.cpp  dog.cpp  main.cpp  talent.cpp
lesson011/task02/: CMakeLists.txt
lesson011/task02/include/: boundingboxdimensions.h  cat.h  circle.h  rectangle.h  shape.h  triangle.h
lesson011/task02/src/: CMakeLists.txt  circle.cpp  main.cpp  rectangle.cpp  shape.cpp  triangle.cpp
lesson012/: README.md
lesson012/task01/: CMakeLists.txt  l12task01  main.cpp
lesson012/task02/: CMakeLists.txt  main.cpp
lesson012/task03/: CMakeLists.txt  main.cpp
lesson013/: README.md
lesson013/task01/: CMakeLists.txt
lesson013/task01/include/: dog.h  toy.h
lesson013/task01/src/: CMakeLists.txt  dog.cpp  main.cpp
lesson013/task02/: CMakeLists.txt
lesson013/task02/include/: dog.h  shared_ptr_toy.h  toy.h
lesson013/task02/src/: CMakeLists.txt  dog.cpp  main.cpp  shared_ptr_toy.cpp  toy.cpp
lesson014/: README.md
lesson014/task01/: CMakeLists.txt  film.json  film_auto.json  main.cpp  src_film.txt
lesson014/task02/: CMakeLists.txt  films_manual.json  main.cpp
lesson014/task03/: company.pb.cc  company.pb.h  company.proto
lesson015/: README.md
lesson015/task01/: main.cpp
lesson015/task02/: main.cpp
lesson015/task03/: CMakeLists.txt  main.cpp
lesson015/task03/include/: registry.h
lesson015/task03/src/: CMakeLists.txt  main.cpp
lesson015/task04/: main.cpp
